[package]
name = "fia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
resolve-path = "0.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_qs = "0.13.0"
url = { version = "2.5.0", features = ["serde"] }
# tokio = { version = "1.37.0", features = ["macros", "full"] }
# websocket = "0.27.1"
