[package]
name = "fia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
resolve-path = "0.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_qs = "0.13.0"
url = { version = "2.5.0", features = ["serde"] }
tokio = { version = "1.37.0", features = ["macros", "full"] }
websocket = "0.27.1"
clap = { version = "4.5.17", features = ["derive"] }
quartz_nbt = { version = "0.2.9", features = ["serde"] }
png = "0.17.13"
flate2 = "1.0.33"
base64 = "0.22.1"
thiserror = "1.0.65"
serde_json = "1.0.133"

[features]
backend = []
pull = []
unpack = []
full = ["backend", "unpack"]
default = ["full"]
